@@ -1,4 +1,4 @@
-$Id: ChangeLog,v 1.93 2010/01/20 16:04:50 tho Exp $
+$Id: ChangeLog,v 1.94 2010/01/22 04:35:35 tho Exp $
 
 ChangeLog file of LibU - http://www.koanlogic.com/libu/index.html
 
@@ -19,10 +19,13 @@ LibU 2.0.0
 	  also bring back to life --no_ipv6 and --no_unixsock configure flags; 
 	  new --no_sctp command line option to explicitly disable SCTP bits
 	- [pwd] internally use u_strtok instead of deprecated u_tokenize 
-	- [array] u_array_set_ptr and u_array_get_ptr interfaces changed
+	- [array] u_array_set_ptr and u_array_get_ptr interfaces changed;
+	  added interfaces for intmax_t and uintmax_t types
 	- [misc] some minor fixes
 	- [string] minor fixes and cleanup
 	- [buf] added u_buf_save interface
+	- [test] add explicit U_TEST_EXIT_SUCCESS and U_TEST_EXIT_FAILURE 
+	  codes for test cases return status
 
 LibU 1.4.1
 	- [missing] u_va_copy added
